--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,10 @@ notes.txt
 # Saved R objects
 objects/
 
+# External analysis
+cap/
+primer/
+
 
 # Created by https://www.gitignore.io/api/r
 # Edit at https://www.gitignore.io/?templates=r
